--- a/themes/friendfeed-bret/views/layouts/application.html.erb
+++ b/themes/friendfeed-bret/views/layouts/application.html.erb
@@ -38,6 +38,9 @@
         <div class="icons"><a href="<%= (FEED_URL || rss_blogs_url) %>"><%= theme_image_tag("feed-big.png") %></a></div>
       </div>
       <div class="section">
+        <img alt="邱韵的照片" witdh="230px" height="310px" src="/images/me.png">
+      </div>
+      <div class="section">
         <%= raw @setting.home_show %>
       </div>       
     </div>    
