--- a/themes/friendfeed-bret/views/layouts/application.html.erb
+++ b/themes/friendfeed-bret/views/layouts/application.html.erb
@@ -34,11 +34,18 @@
 	<div id="main">
     <div id="sidebar">      
       <div class="section">
-        <h2>订阅我的博客</h2>
-        <div class="icons"><a href="<%= (FEED_URL || rss_blogs_url) %>"><%= theme_image_tag("feed-big.png") %></a></div>
+        <div class="headline">
+          <%= theme_image_tag('find-me-on-the-web.png')%>
+        </div>
+        <div class="icons">
+          <a href="https://www.facebook.com/griffinqiu" target="_blank"><%= theme_image_tag("facebook-big.png") %></a>
+          <a href="https://twitter.com/griffinqiu" target="_blank"><%= theme_image_tag("twitter-big.png") %></a>
+          <a href="<%= (FEED_URL || rss_blogs_url) %>"target="_blank"><%= theme_image_tag("feed-big.png") %></a>
+          <a href="mailto:qiuyun@me.com"><%= theme_image_tag("gmail-big.png") %></a>
+        </div>
       </div>
       <div class="section">
-        <img alt="邱韵的照片" witdh="230px" height="310px" src="/images/me.png">
+        <img alt="邱韵的照片" width="190px" src="/images/me.png">
       </div>
       <div class="section">
         <%= raw @setting.home_show %>
